# trbs

./: .gitignore  .pre-commit-config.yaml  Analyze case with vlinder.ipynb  CONTRIBUTING.md  DEV.md  Pipfile  README.md  Test vlinder package.ipynb  analyze_case_with_vlinder.ipynb  changelog.md  graph.html  pyproject.toml  setup.cfg  vlinder_demo.ipynb
.github/workflows/: auto-checks.yml  publish-to-pypi.yml  publish-to-testpypi.yml
docs/: documentation.md
model/: analyze_case.ipynb  tRBS.ipynb
model/core/: appreciate.py  case_exporter.py  case_importer.py  evaluate.py  import_case.py  report_export.py  trbs.py  utils.py  visualize.py
model/data/: README.md  template.xlsx
model/data/DSM/csv/: configurations.csv  decision_makers_options.csv  dependencies.csv  fixed_inputs.csv  key_output_weights.csv  key_outputs.csv  scenario_weights.csv  scenarios.csv  theme_weights.csv
model/data/DSM/json/: configurations.json  decision_makers_options.json  dependencies.json  fixed_inputs.json  key_output_weights.json  key_outputs.json  scenario_weights.json  scenarios.json  theme_weights.json
model/data/DSM/xlsx/: DSM.xlsx
model/data/IZZ/csv/: configurations.csv  dependencies.csv
model/data/IZZ/json/: configurations.json  dependencies.json
model/data/IZZ/xlsx/: IZZ.xlsx
model/data/beerwiser/csv/: case_text_elements.csv  configurations.csv  decision_makers_options.csv  dependencies.csv  fixed_inputs.csv  generic_text_elements.csv  intermediates.csv  key_output_weights.csv  key_outputs.csv  scenario_weights.csv  scenarios.csv  theme_weights.csv
model/data/beerwiser/json/: case_text_elements.json  decision_makers_options.json  dependencies.json  fixed_inputs.json  generic_text_elements.json  intermediates.json  key_outputs.json  scenarios.json
model/data/beerwiser/xlsx/: beerwiser.xlsx
model/data/izz/csv/: case_text_elements.csv  key_output_weights.csv  scenarios.csv
model/data/izz/json/: case_text_elements.json  configurations.json  decision_makers_options.json  dependencies.json  scenarios.json
model/data/izz/xlsx/: izz.xlsx
model/data/refugee/csv/: case_text_elements.csv  decision_makers_options.csv  dependencies.csv  key_output_weights.csv  key_outputs.csv  scenario_weights.csv  theme_weights.csv
model/data/refugee/json/: case_text_elements.json  decision_makers_options.json  dependencies.json  generic_text_elements.json  key_outputs.json
model/data/refugee/xlsx/: refugee.xlsx
model/docs/: documentation.md
model/tests/: params.py  test_appreciate.py  test_case_importer.py  test_evaluate.py  test_utils.py  test_visualize.py
model/unused/: csv_to_json.py  csv_to_xlsx.py
model/utils/: csv_to_json.py  csv_to_xlsx.py
src/vlinder/: __init__.py  appreciate.py  case_exporter.py  case_importer.py  evaluate.py  make_report.py  optimize.py  presentation.py  report.py  report_export.py  test_modify.py  trbs.py  utils.py  visualize.py
src/vlinder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vlinder/data/: README.md  template.xlsx
src/vlinder/data/Beerwiser/csv/: case_text_elements.csv  configurations.csv  dependencies.csv  fixed_inputs.csv  key_outputs.csv
src/vlinder/data/Beerwiser/json/: case_text_elements.json  decision_makers_options.json  dependencies.json  fixed_inputs.json  key_outputs.json  scenario_weights.json
src/vlinder/data/Beerwiser/xlsx/: Beerwiser.xlsx  beerwiser.xlsx
src/vlinder/data/DSM/csv/: case_text_elements.csv  configurations.csv  decision_makers_options.csv  dependencies.csv  fixed_inputs.csv  key_outputs.csv  scenario_weights.csv  theme_weights.csv
src/vlinder/data/DSM/json/: case_text_elements.json  configurations.json  decision_makers_options.json  dependencies.json  fixed_inputs.json  key_output_weights.json  key_outputs.json  scenario_weights.json  scenarios.json  theme_weights.json
src/vlinder/data/DSM/xlsx/: DSM.xlsx
src/vlinder/data/IZZ/csv/: case_text_elements.csv  configurations.csv  dependencies.csv  fixed_inputs.csv  key_outputs.csv  scenario_weights.csv  theme_weights.csv
src/vlinder/data/IZZ/json/: configurations.json  dependencies.json  fixed_inputs.json  key_outputs.json  theme_weights.json
src/vlinder/data/IZZ/xlsx/: IZZ.xlsx  izz.xlsx
src/vlinder/data/NEMO/csv/: case_text_elements.csv  configurations.csv  decision_makers_options.csv  dependencies.csv  fixed_inputs.csv  generic_text_elements.csv  key_output_weights.csv  key_outputs.csv  scenarios.csv  theme_weights.csv
src/vlinder/data/NEMO/json/: case_text_elements.json  configurations.json  decision_makers_options.json  dependencies.json  fixed_inputs.json  generic_text_elements.json  key_output_weights.json  key_outputs.json  scenario_weights.json  scenarios.json  theme_weights.json
src/vlinder/data/NEMO/xlsx/: NEMO.xlsx
src/vlinder/data/Refugee/csv/: configurations.csv  dependencies.csv  fixed_inputs.csv  key_outputs.csv
src/vlinder/data/Refugee/json/: case_text_elements.json  configurations.json  dependencies.json  fixed_inputs.json  generic_text_elements.json  key_output_weights.json  key_outputs.json  scenarios.json  theme_weights.json
src/vlinder/data/Refugee/xlsx/: Refugee.xlsx  refugee.xlsx
src/vlinder/data/beerwiser/csv/: configurations.csv  decision_makers_options.csv  fixed_inputs.csv  theme_weights.csv
src/vlinder/data/beerwiser/json/: case_text_elements.json  configurations.json  dependencies.json  (+1 more)
src/vlinder_test/: __init__.py  appreciate.py  case_importer.py  trbs.py  visualize.py
tests/: params.py  test_appreciate.py  test_case_exporter.py  test_case_importer.py  test_evaluate.py  test_make_report.py  test_modify.py  test_optimize.py  test_trbs.py  test_utils.py  test_visualize.py
(+16 files in other folders)
