[metadata]
name = vlinder_test
version = 0.16
author = Vlinder team
url = https://github.com/responsible-business-decision-making/trbs
description = Package for responsible business decision making
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    pandas >= 2.0.3
    numpy >= 1.25.0
    openpyxl >= 3.1.2
    matplotlib >= 3.7.2
    xlsxwriter >= 3.1.2

[options.package_data]
* = *.md, *.xlsx, *.csv, *.json 